--- a/_config.yml
+++ b/_config.yml
@@ -19,5 +19,5 @@ sass:
   style: compressed
   sass_dir: 'assets/styles'
 timezone: America/New_York
-title: Tom Meagher
+title: Figali Taho
 url: "https://meagher.co"
